--- a/package.json
+++ b/package.json
@@ -27,5 +27,6 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/passchieri/protobufstream.git"
-  }
+  },
+  "homepage": "https://github.com/passchieri/protobufstream"
 }
