--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "protobufstream",
+  "name": "@igor.passchier/protobufstream",
   "version": "1.0.2",
   "description": "Stream implementation of a protobuf message encoder/decoder.",
   "main": "src/index.js",
